[build-system]
requires = ["setuptools>=65.6.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ansible-inventory-helper"
version = "0.0.2"
description = "Devops helper tool for listing Unified Assurance collectors"
readme = "README.md"
authors = [{ name = "Brian Lee", email = "brian.baligad.lee@zayo.com" }]
license = { file = "LICENSE" }
dependencies = [
    'build>=1.0.3',
    'requests>=2.31.0',
    'shake-that-assurance>=0.0.6'
]
requires-python = ">=3.11.6"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: System :: Monitoring",
]

[project.urls]
Homepage = "https://github.com/Zayo-Network-Automation/ansible-inventory-helper"

# https://setuptools.pypa.io/en/latest/userguide/entry_point.html
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[project.scripts]
ua-collector-inventory = "inventory.ua:collector_inventory"